--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,26 @@ li {
     margin: 20px;
 }
 
+a {
+    color: #fff;
+}
+
+a:hover {
+    color: #0dc918;
+    transition: 0.3s all;
+}
+
+#inscreva-se-btn {
+    border: 2px solid #0dc918;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+#inscreva-se-btn:hover {
+    background-color: #0dc918;
+    color: #fff;
+}
+
 h1 {
     font-weight: 200;
 }
@@ -34,6 +54,49 @@ main {
     margin-top: 50px;
 }
 
+h2 {
+    font-size: 56px;
+    line-height: 10px;
+    font-family: poppinsregular;
+}
+
+span {
+    color: #0dc918;
+}
+
+p {
+    line-height: 20px;
+    max-width: 500px;
+    font-family: poppinsregular;
+}
+
 img {
     width: 580px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+}
+
+form [type="submit"] {
+    height: 50px;
+    width: 50%;
+    background-color: #0dc918;
+    color: #fff;
+    font-weight: bold;
+}
+
+form [type="submit"]:hover {
+    cursor: pointer;
+}
+
+input {
+    margin-top: 20px;
+    height: 20px;
+    padding: 15px;
+    border-radius: 20px;
+    border: none;
+    font-size: 15px;
 }
